--- a/wavy_text.html
+++ b/wavy_text.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wavy text</title>
+    <title>Ravinder Wavy text</title>
   </head>
   <style>
     @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
